# loan-document-platform

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev.txt
.claude/: README.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.specify/: README.md  feature.json  init-options.json  integration.json
contracts/: runtime-config.schema.json
docs/: architecture.md  github-delivery.md  runbook.md  security.md  spec-driven-development.md  ui-handoff.md
scripts/: bootstrap.ps1  check-python-coverage.py  common.psm1  configure-environment.ps1  configure-github-protection.ps1  cutover-api-domain.ps1  deploy-all.ps1  deploy-azure.ps1  deploy-edge.ps1  deploy-idp.ps1  deploy-platform.ps1  deploy-web.ps1  install-trivy.ps1  new-screen-config.ps1  new-service-certificate-request.ps1  provision-entra-federation.ps1  provision-entra.ps1  provision-github-azure.ps1  provision-github.ps1  sync-github-entra.ps1  sync-spec-kit.ps1  test-azure-api-load.ps1  test-powershell-syntax.ps1  validate-idp-image-manifest.py  validate-repository.py
scripts/idp_windows_cli_bridge/: idp_windows_cli_bridge.py  pyproject.toml
specs/: README.md
tests/: test_aws_adapters.py  test_aws_federation.py  test_azure_api_auth.py  test_azure_api_domain.py  test_azure_api_http.py  test_azure_api_settings.py  test_azure_domain_deployment.py  test_environment_configuration.py  test_identity_flow_docs.py  test_idp_build_tool_repair.py  (+10 more)
(+70 files in other folders)
